fix: adjust spacing all over the app

--- a/src/components/Sidebar/sidebar.module.scss
+++ b/src/components/Sidebar/sidebar.module.scss
@@ -1,7 +1,5 @@
 .wrapper {
   background-color: var(--background-50);
-  margin-top: -10px;
-  margin-left: -10px;
   padding-right: 0;
   border-right: 1px solid var(--accent);
   .sidebar {
