--- a/src/style/_grid.scss
+++ b/src/style/_grid.scss
@@ -6,8 +6,6 @@
 
 .container-fluid {
   width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -15,13 +13,11 @@
 .row {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -15px;
-  width: calc(100% + 20px);
+  width: 100%;
 }
 
 .col {
   flex: 1;
-  padding: 10px;
 }
 
 @for $i from 1 through 12 {
